--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <title>Hold Shift to Check Multiple Checkboxes</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-</head>
-<body>
+ <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> </head>
 
+<body>
    <!--
    The following is a common layout you would see in an email client.
 
@@ -14,10 +14,6 @@
 
   -->
   <div class="inbox">
-    <div class="item">
-      <input type="checkbox">
-      <p>This is an inbox layout.</p>
-    </div>
     <div class="item">
       <input type="checkbox">
       <p>Check one item</p>
@@ -28,7 +24,7 @@
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Check a lower item</p>
+      <p>Check any other item</p>
     </div>
     <div class="item">
       <input type="checkbox">
@@ -36,7 +32,11 @@
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Try to do it without any libraries</p>
+      <p><strong>Use Clear Selection Button below or Ctrl+L to clear</strong></p>
+    </div>
+    <div class="item">
+      <input type="checkbox">
+      <p>This was done without using any libraries</p>
     </div>
     <div class="item">
       <input type="checkbox">
@@ -44,12 +44,15 @@
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Good Luck!</p>
+      <p>This challenge is part of Wes Bos' #javascript30</p>
     </div>
     <div class="item">
       <input type="checkbox">
-      <p>Don't forget to tweet your result!</p>
+      <p>Thanks for checking out my solution!</p>
     </div>
+  </div>
+  <div class="button">
+    <button class="refresh">Clear Selection</button>
   </div>
 
 </body>
